fix: fix codemirror vertical scroll not working when lines are not wrapped

--- a/packages/hoppscotch-common/assets/scss/styles.scss
+++ b/packages/hoppscotch-common/assets/scss/styles.scss
@@ -487,6 +487,10 @@ pre.ace_editor {
   }
 }
 
+.cm-scroller {
+  overscroll-behavior: auto;
+}
+
 .cm-editor {
   .cm-line::selection {
     @apply bg-accentDark #{!important};
